# tc_mailmanager

./: Makefile  README.md  circle.yml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml  codeql-analysis.yml  labeler.yml  publish.yml
tc_mailmanager/: __init__.py  mail_manager.py
tests/: test_mail_manager.py
